Fix name text alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -125,4 +125,5 @@ div {
 
 #name {
   font-size: 22px;
+  align-self: flex-start;
 }
